--- a/IITU_voenka/Areas/Admin/Views/_ViewImports.cshtml
+++ b/IITU_voenka/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,3 @@
-﻿@using IITU_voenka
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using IITU_voenka.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using IITU_voenka.Domain.Entities
