--- a/IITU_voenka/Views/Shared/MetatagsPartial.cshtml
+++ b/IITU_voenka/Views/Shared/MetatagsPartial.cshtml
@@ -1,5 +1,4 @@
-﻿@using IITU_voenka.Service;
-<meta charset="utf-8" />
+﻿<meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 @if (ViewBag.Title != null)
 {
@@ -9,15 +8,11 @@ else
 {
     <title>@Config.CompanyName</title>
 }
-
 @if (ViewBag.Description != null)
 {
     <meta name="description" content="@ViewBag.Description" />
-
 }
-
 @if (ViewBag.Keywords != null)
 {
     <meta name="keywords" content="@ViewBag.Keywords" />
-
 }
