--- a/IITU_voenka/Views/_ViewImports.cshtml
+++ b/IITU_voenka/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@using IITU_voenka
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using IITU_voenka.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using IITU_voenka.Service
+@using IITU_voenka.Domain.Entities
+@using IITU_voenka.Models.ViewComponents
